Edits to the layout styles

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".GroupActivity" />
-        <activity android:name=".StagesActivity"></activity>
+        <activity android:name=".StagesActivity" />
+        <activity android:name=".LoginActivity"></activity>
     </application>
 
 </manifest>
