--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'me.himanshusoni.chatmessageview:chat-message-view:1.0.3'
+    implementation files('libs/Ab.jar')
 }
